--- a/vfa_blog/VariableFlipAngle.ipynb
+++ b/vfa_blog/VariableFlipAngle.ipynb
@@ -421,7 +421,7 @@
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "The closed-form solution (Equation 1) makes several assumptions which in practice may not always hold true if care is not taken. Mainly, it is assumed that the longitudinal magnetization has reached a steady state after a large number of TRs, and that the transverse magnetization is perfectly spoiled at the end of each TR. Bloch simulations – a numerical approach at solving the Bloch <i>equations</i> for a set of spins at each time point –  provide a more realistic estimate of the signal if the number of repetition times is small (i.e. a steady-state is not achieved). As can be seen from Figure 3, the number of repetitions required to reach a steady state not only depends on T<sub>1</sub>, but also on the flip angle; flip angles near the Ernst angle need more TRs to reach a steady state. Preparation pulses or an outward-in k-space acquisition pattern are typically sufficient to reach a steady state by the time that the center of k-space is acquired, which is where most of the image contrast resides.\n",
+    "The closed-form solution (Equation 1) makes several assumptions, which in practice may not always hold true if care is not taken. Mainly, it is assumed that the longitudinal magnetization has reached a steady state after a large number of TRs, and that the transverse magnetization is perfectly spoiled at the end of each TR. Bloch simulations – a numerical approach at solving the Bloch <i>equations</i> for a set of spins at each time point – provide a more realistic estimate of the signal if the number of repetition times is small (i.e. a steady-state is not achieved). As can be seen from Figure 3, the number of repetitions required to reach a steady state not only depends on T<sub>1</sub>, but also on the flip angle; flip angles near the Ernst angle need more TRs to reach a steady state. Preparation pulses or an outward-in k-space acquisition pattern are typically sufficient to reach a steady state by the time that the center of k-space is acquired, which is where most of the image contrast resides.\n",
     "</p>\n",
     "</div>"
    ]
@@ -647,7 +647,7 @@
     "<div class=figure_caption>\n",
     "<p style=\"text-align:justify;\">\n",
     "<b>\n",
-    "Figure 4. Signal curves estimated using Bloch simulations for three categories of signal spoiling: (1) ideal spoiling (blue), gradient & RF Spoiling (orange), and no spoiling (green). Simulations details: TR = 25 ms, T<sub>1</sub> = 900 ms, T<sub>e</sub> = 100 ms, TE = 5 ms, 100 spins. For the ideal spoiling case, the transverse magnetization is set to zero at the end of each TR. For the gradient & RF spoiling case, each spin is rotated by different increments of phase (2𝜋 / # of spins) to simulate complete decoherence from gradient spoiling, and the RF phase of the excitation pulse is  ɸ<sub><i>n</i></sub> = ɸ<sub><i>n</i>-1</sub> + <i>n</i>ɸ<sub>0</sub> = ½ ɸ<sub>0</sub>(<i>n</i><sup>2</sup> + <i>n</i> + 2) (Bernstein et al. 2004) with ɸ<sub>0</sub> = 117° (Zur et al. 1991) after each TR.\n",
+    "Figure 4. Signal curves estimated using Bloch simulations for three categories of signal spoiling: (1) ideal spoiling (blue), gradient & RF Spoiling (orange), and no spoiling (green). Simulations details: TR = 25 ms, T<sub>1</sub> = 900 ms, T<sub>2</sub> = 100 ms, TE = 5 ms, 100 spins. For the ideal spoiling case, the transverse magnetization is set to zero at the end of each TR. For the gradient & RF spoiling case, each spin is rotated by different increments of phase (2𝜋 / # of spins) to simulate complete decoherence from gradient spoiling, and the RF phase of the excitation pulse is  ɸ<sub><i>n</i></sub> = ɸ<sub><i>n</i>-1</sub> + <i>n</i>ɸ<sub>0</sub> = ½ ɸ<sub>0</sub>(<i>n</i><sup>2</sup> + <i>n</i> + 2) (Bernstein et al. 2004) with ɸ<sub>0</sub> = 117° (Zur et al. 1991) after each TR.\n",
     "</b>\n",
     "</p>\n",
     "</div>"
@@ -881,7 +881,7 @@
    "source": [
     "<div class=blog_body>\n",
     "<p style=\"text-align:justify;\">\n",
-    "At first glance, one could be tempted to fit VFA data using a non-linear least squares fitting algorithm such as Levenberg-Marquardt with Eq. 1, which typically only has two free fitting variables (T<sub>1</sub> and <i>M</i><sub>0</sub>). Although this is a valid way of estimating T<sub>1</sub> from VFA data, it is rarely done in practice because a simple refactoring of Equation 1 allows T<sub>1</sub> values to be estimated with a linear least square fitting algorithm, which substantially reduces the processing time. Without any approximations, Equation 1 can be rearranged into the form <b>y</b> = m<b>x</b>+b (Gupta 1977):\n",
+    "At first glance, one could be tempted to fit VFA data using Eq. 1, which typically only has two free fitting variables (T<sub>1</sub> and <i>M</i><sub>0</sub>), and a non-linear least squares fitting algorithm such as Levenberg-Marquardt. Although this is a valid way of estimating T<sub>1</sub> from VFA data, it is rarely done in practice because a simple refactoring of Equation 1 allows T<sub>1</sub> values to be estimated with a linear least square fitting algorithm, which substantially reduces the processing time. Without any approximations, Equation 1 can be rearranged into the form <b>y</b> = m<b>x</b>+b (Gupta 1977):\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
@@ -889,7 +889,7 @@
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "As the third term does not change between measurements (it is constant for each <i>θ<sub>n</sub></i>), it can be grouped into the constant for a simpler representation:\n",
+    "The third term does not change between measurements (it is constant for each <i>θ<sub>n</sub></i>), and it can be grouped into the constant for a simpler representation:\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
@@ -1247,15 +1247,15 @@
     "<div class=blog_body>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "There are two important imaging protocol design considerations that should be taken into account when planning to use VFA: (1) how many and which flip angles to use to acquire VFA data, and (2) correcting inaccurate flip angles due to transmit RF field inhomogeneity. Most VFA experiments use the minimum number of required flip angles (two) to minimize acquisition time. For this case, it has been shown that the flip angle choice resulting in the best precision for VFA T<sub>1</sub> estimates for a sample with a single T<sub>1</sub> value (i.e. single tissue) are the two flip angles that result in 71% of the maximum possible steady-state signal (i.e. at the Ernst angle) (Deoni et al. 2003; Schabel & Morrell 2009).\n",
+    "There are two important imaging protocol design considerations that should be taken into account when planning to use VFA: (1) how many and which flip angles to acquire VFA data, and (2) how to correct inaccurate flip angles due to transmit RF field inhomogeneity. Most VFA experiments use the minimum number of required flip angles (two) to minimize acquisition time. When using only two flip angles, it has been shown that the flip angle choice resulting in the best precision for VFA T<sub>1</sub> estimates for a sample with a single T<sub>1</sub> value (i.e. single tissue) are the two flip angles that result in 71% of the maximum possible steady-state signal (i.e. at the Ernst angle) (Deoni et al. 2003; Schabel & Morrell 2009).\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "Time allowing, additional flip angles are often acquired at higher values and in between the two above, because greater signal differences between tissue T<sub>1</sub> values are present there (e.g. Figure 2). Also, for more than two flip angles, Equations 1 and 4 do not have the same noise weighting for each fitting point, which may bias linear least-square T<sub>1</sub> estimates at lower SNRs. Thus, it has been recommended that low SNR data should be fitted with either Equation 1 using non-linear least-squares (slower fitting) or with a weighted linear least-squares form of Equation 4 (Chang et al. 2008).\n",
+    "Time allowing, additional flip angles are often acquired at higher values and in between the two angles specified by the Ernst equation, because the signal differences between tissue T<sub>1</sub> values are greater in those regions (e.g. Figure 2). Also, for more than two flip angles, Equations 1 and 4 do not have the same noise weighting for each fitting point, which may bias linear least-square T<sub>1</sub> estimates at lower SNRs. Thus, it has been recommended that low SNR data should be fit with either Equation 1 using non-linear least-squares (more computational time required) or with a weighted linear least-squares form of Equation 4 (Chang et al. 2008).\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "Accurate knowledge of the flip angle values is very important to produce accurate T<sub>1</sub> maps. Because of how the RF field interacts with matter (Sled & Pike 1998), the excitation RF field (B<sub>1</sub><sup>+</sup>, or B<sub>1</sub> for short) of a loaded RF coil results in spatial variations in intensity/amplitude, unless RF shimming is available to counteract this effect (not common at clinical field strengths). For quantitative measurements like VFA which are sensitive to this parameter, the flip angle can be corrected (voxelwise) relative to the nominal value by multiplying it with a scaling factor (B<sub>1</sub>) from a B<sub>1</sub> map that is acquired during the same session:\n",
+    "Accurate knowledge of the flip angle values is very important to produce accurate T<sub>1</sub> maps. Because of how the RF field interacts with matter (Sled & Pike 1998), the excitation RF field (B<sub>1</sub><sup>+</sup>, or B<sub>1</sub> for short) of a loaded RF coil results in spatial variations in intensity/amplitude, unless RF shimming is available to counteract this effect (not common at clinical field strengths). For quantitative measurements like VFA, which are sensitive to this parameter, the flip angle can be corrected (voxelwise) relative to the nominal value by multiplying it with a scaling factor (B<sub>1</sub>) from a B<sub>1</sub> map that is acquired during the same session:\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
@@ -1263,7 +1263,7 @@
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "B<sub>1</sub> in this context is normalized, meaning that it is unitless and has a value of 1 in voxels where the RF field has the expected amplitude (i.e. where the nominal flip angle is the actual flip angle). Figure 6 displays fitted VFA T<sub>1</sub> values from a Monte Carlo dataset simulated using biased flip angle values, and fitted without/with B<sub>1</sub> correction.\n",
+    "B<sub>1</sub> in this context is normalized, meaning that it is unitless and has a value of 1 in voxels where the RF field has the expected amplitude (i.e. where the nominal flip angle is the actual flip angle). Figure 6 displays the fitted VFA T<sub>1</sub> values from a Monte Carlo dataset simulated using biased flip angle values, and fit without/with B<sub>1</sub> correction.\n",
     "</p>\n",
     "\n",
     "</div>"
@@ -1278,7 +1278,7 @@
     "<div class=figure_caption>\n",
     "<p style=\"text-align:justify;\">\n",
     "<b>\n",
-    "Figure 6. Mean and standard deviations of fitted VFA T<sub>1</sub> values for a set of Monte Carlo simulations (SNR = 100, N = 1000), simulated using a wide range of biased flip angles and fitted without (blue) or with (red) B<sub>1</sub> correction. Simulation parameters: TR = 25 ms, T<sub>1</sub> = 900 ms, <i>θ<sub>nominal</sub></i> = 6° and 32° (optimized values for this TR/T<sub>1</sub> combination). Notice how even after B<sub>1</sub> correction, fitted T<sub>1</sub> values at B<sub>1</sub> values far from the nominal case (B<sub>1</sub> = 1) exhibit larger variance, as the actual flip angles of the simulated signal deviate from the optimal values for this TR/T<sub>1</sub> (Deoni et al. 2003).\n",
+    "Figure 6. Mean and standard deviations of VFA T<sub>1</sub> values for a set of Monte Carlo simulations (SNR = 100, N = 1000), simulated using a wide range of biased flip angles and fitted without (blue) or with (red) B<sub>1</sub> correction. Simulation parameters: TR = 25 ms, T<sub>1</sub> = 900 ms, <i>θ<sub>nominal</sub></i> = 6° and 32° (optimized values for this TR/T<sub>1</sub> combination). Notice how even after B<sub>1</sub> correction, fitted T<sub>1</sub> values at B<sub>1</sub> values far from the nominal case (B<sub>1</sub> = 1) exhibit larger variance, as the actual flip angles of the simulated signal deviate from the optimal values for this TR/T<sub>1</sub> (Deoni et al. 2003).\n",
     "</b>\n",
     "</div>"
    ]
@@ -1797,7 +1797,7 @@
    "source": [
     "<div class=blog_body>\n",
     "<p style=\"text-align:justify;\">\n",
-    "It has been well reported in recent years that the accuracy of VFA T<sub>1</sub> estimates is very sensitive to pulse sequence implementations (Stikov et al. 2015; Lutti & Weiskopf 2013; Baudrexel et al. 2018), and as such is less robust than the gold standard inversion recovery technique. In particular, the signal bias resulting from insufficient spoiling can result in inaccurate T<sub>1</sub> estimates of up to 30% relative to inversion recovery estimated values (Stikov et al. 2015). VFA T<sub>1</sub> map accuracy and precision is also strongly dependent on the quality of the measured B<sub>1</sub> map (Lee et al. 2017), which can vary substantially between implementations (Boudreau et al. 2017). Modern rapid B<sub>1</sub> mapping pulse sequences are not as widely available as VFA, resulting in some groups attempting alternative ways of removing the bias from the T<sub>1</sub> maps like generating an artificial B<sub>1</sub> map through the use of image processing techniques (Liberman et al. 2014) or omitting B<sub>1</sub> correction altogether (Yuan et al. 2012). The latter is not recommended, because most MRI scanners have default pulse sequences that, with careful protocol settings, can provide B<sub>1</sub> maps of sufficient quality very rapidly (Boudreau et al. 2017; Wang et al. 2005; Samson et al. 2006).\n",
+    "It has been well reported in recent years that the accuracy of VFA T<sub>1</sub> estimates is very sensitive to pulse sequence implementations (Stikov et al. 2015; Lutti & Weiskopf 2013; Baudrexel et al. 2018), and as such is less robust than the gold standard inversion recovery technique. In particular, the signal bias resulting from insufficient spoiling can result in inaccurate T<sub>1</sub> estimates of up to 30% relative to inversion recovery estimated values (Stikov et al. 2015). VFA T<sub>1</sub> map accuracy and precision is also strongly dependent on the quality of the measured B<sub>1</sub> map (Lee et al. 2017), which can vary substantially between implementations (Boudreau et al. 2017). Modern, rapid B<sub>1</sub> mapping pulse sequences are not as widely available as VFA, resulting in some groups attempting alternative ways of removing the bias from the T<sub>1</sub> maps like generating an artificial B<sub>1</sub> map through the use of image processing techniques (Liberman et al. 2014) or omitting B<sub>1</sub> correction altogether (Yuan et al. 2012). The latter is not recommended, because most MRI scanners have default pulse sequences that, with careful protocol settings, can provide B<sub>1</sub> maps of sufficient quality very rapidly (Boudreau et al. 2017; Wang et al. 2005; Samson et al. 2006).\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
