Fix minor formatting

--- a/mp2rage_blog/MP2RAGE.ipynb
+++ b/mp2rage_blog/MP2RAGE.ipynb
@@ -166,7 +166,7 @@
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "Because MP2RAGE is a hybrid of pulse sequences used for inversion recovery and VFA, the resulting signal equations are more complex. Typically, a steady state is not achieved during the short train of GRE imaging blocks, so the signal at the center of k-space for each readout (which defines the contrast weighting) will depend on the number of phase-encoding steps. For simplicity, the equations presented here assume that the 3D phase-encoding dimension is fully sampled (no partial Fourier or parallel imaging acceleration). For this case (see appendix of ((Marques et al. 2010) for derivation details), the signal equations are:\n",
+    "Because MP2RAGE is a hybrid of pulse sequences used for inversion recovery and VFA, the resulting signal equations are more complex. Typically, a steady state is not achieved during the short train of GRE imaging blocks, so the signal at the center of k-space for each readout (which defines the contrast weighting) will depend on the number of phase-encoding steps. For simplicity, the equations presented here assume that the 3D phase-encoding dimension is fully sampled (no partial Fourier or parallel imaging acceleration). For this case (see appendix of (Marques et al. 2010) for derivation details), the signal equations are:\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
@@ -190,7 +190,7 @@
     "</p>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "From Eqs. (3–6), it is evident that the MP2RAGE parameter S<sub>MP2RAGE</sub> (Eqs. (1.11) and (1.12)) cancels out the effects of receive field sensitivity, T<sub>2</sub><sup>*</sup>, and M<sub>0</sub>. The signal sensitivity related to the transmit field (B<sub>1</sub><sup>+</sup>), hidden in Eqs. (3–6) within the flip angle values <i>θ<sub>1</sub></i> and <i>θ<sub>2</sub></i>, can also be reduced by careful pulse sequence protocol design (Marques et al. 2010), but not entirely eliminated (Marques & Gruetter 2013).\n",
+    "    From Eqs. (3–6), it is evident that the MP2RAGE parameter <i>S</i><sub>MP2RAGE</sub> (Eqs. (1.11) and (1.12)) cancels out the effects of receive field sensitivity, T<sub>2</sub><sup>*</sup>, and M<sub>0</sub>. The signal sensitivity related to the transmit field (B<sub>1</sub><sup>+</sup>), hidden in Eqs. (3–6) within the flip angle values <i>θ<sub>1</sub></i> and <i>θ<sub>2</sub></i>, can also be reduced by careful pulse sequence protocol design (Marques et al. 2010), but not entirely eliminated (Marques & Gruetter 2013).\n",
     "</p>\n",
     "\n",
     "\n",
@@ -229,7 +229,7 @@
     "<div class=figure_caption>\n",
     "<p style=\"text-align:justify;\">\n",
     "<b>\n",
-    "Figure 2. T<sub>1</sub> lookup table as a function of B<sub>1</sub> and S<sub>MP2RAGE</sub> value. Inversion times used to acquire this magnitude image dataset were 800 ms and 2700 ms, the flip angles were 4° and 5° (respectively),  TR<sub>MP2RAGE</sub> = 6000 ms, and TR = 6.7 ms. The code that was used were shared open sourced by the authors of the original MP2RAGE paper (<a href=\"url\">https://github.com/JosePMarques/MP2RAGE-related-scripts</a>).\n",
+    "    Figure 2. T<sub>1</sub> lookup table as a function of B<sub>1</sub> and <i>S</i><sub>MP2RAGE</sub> value. Inversion times used to acquire this magnitude image dataset were 800 ms and 2700 ms, the flip angles were 4° and 5° (respectively),  TR<sub>MP2RAGE</sub> = 6000 ms, and TR = 6.7 ms. The code that was used were shared open sourced by the authors of the original MP2RAGE paper (<a href=\"url\">https://github.com/JosePMarques/MP2RAGE-related-scripts</a>).\n",
     "</b>\n",
     "</div>"
    ]
@@ -426,7 +426,7 @@
     "<div class=blog_body>\n",
     "\n",
     "<p style=\"text-align:justify;\">\n",
-    "To produce T<sub>1</sub> maps with good accuracy and precision using dictionary-based interpolation methods, it is important that the signal curves are unique for each parameter value. MP2RAGE can produce good T<sub>1</sub> maps by using a dictionary with only dimensions (T<sub>1</sub>, <i>S</i><sub>MP2RAGE</sub>), since <i>S</i><sub>MP2RAGE</sub> is unique for each T<sub>1</sub> value for a given protocol  (Marques et al. 2010). However, as was noted above, <i>S</i><sub>MP2RAGE</sub> is also sensitive to B<sub>1</sub> because of <i>θ<sub>1</sub></i> and <i>θ<sub>2</sub></i> in Eqs. (1.13–1.16). The  B<sub>1</sub>-sensitivity can be reduced substantially with careful MP2RAGE protocol optimization (Marques et al. 2010), and further improved by including B<sub>1</sub> as one of the dictionary dimensions [T<sub>1</sub>, B<sub>1</sub>, SMP2RAGE] (Figure 1.15).  This requires an additional acquisition of a B<sub>1</sub> map (Marques & Gruetter 2013), which lengthens the scan time. \n",
+    "To produce T<sub>1</sub> maps with good accuracy and precision using dictionary-based interpolation methods, it is important that the signal curves are unique for each parameter value. MP2RAGE can produce good T<sub>1</sub> maps by using a dictionary with only dimensions (T<sub>1</sub>, <i>S</i><sub>MP2RAGE</sub>), since <i>S</i><sub>MP2RAGE</sub> is unique for each T<sub>1</sub> value for a given protocol  (Marques et al. 2010). However, as was noted above, <i>S</i><sub>MP2RAGE</sub> is also sensitive to B<sub>1</sub> because of <i>θ<sub>1</sub></i> and <i>θ<sub>2</sub></i> in Eqs. (1.13–1.16). The  B<sub>1</sub>-sensitivity can be reduced substantially with careful MP2RAGE protocol optimization (Marques et al. 2010), and further improved by including B<sub>1</sub> as one of the dictionary dimensions [T<sub>1</sub>, B<sub>1</sub>, <i>S</i><sub>MP2RAGE</sub>] (Figure 1.15).  This requires an additional acquisition of a B<sub>1</sub> map (Marques & Gruetter 2013), which lengthens the scan time. \n",
     "</p>\n",
     "\n",
     "</div>"
