Fix justify of fig captions

--- a/t1rho_blog/T1rho.ipynb
+++ b/t1rho_blog/T1rho.ipynb
@@ -41,11 +41,10 @@
    },
    "source": [
     "<div class=figure_caption>\n",
-    "<center>\n",
-    "<b style=\"text-align:justify;\">\n",
+    "<p style=\"text-align:justify;\">\n",
+    "<b>\n",
     "Figure 1. Simplified diagram of a T<sub>1𝞺</sub> Spin-Lock pulse sequence illustrating the tip-down RF pulse, spin-lock pulse (<i>θ</i><sub>y</sub>), the tip-up RF pulse and the crusher to dephase residual signal in the transverse plane. \n",
     "</b>\n",
-    "</center>\n",
     "</div>\n",
     "\n",
     "<p>\n",
@@ -101,11 +100,10 @@
    },
    "source": [
     "<div class=figure_caption>\n",
-    "<center>\n",
-    "<b style=\"text-align:justify;\">\n",
+    "<p style=\"text-align:justify;\">\n",
+    "<b>\n",
     "Figure 2. Rotating frame representation of the T<sub>1𝞺</sub> experiment (a). In the rotating frame of reference, the spins experience an effective RF field, ω<sub>eff</sub>. Typically, the spin-lock pulse is applied on-resonance and the spins experience ω<sub>eff</sub> = ω<sub>1</sub> = ɣB<sub>1</sub>. If an off-resonance pulse is used, the spins experience ω<sub>eff</sub> = Δ + ω<sub>1</sub>, where Δ is the off-resonance component. The timing diagram (b) of a simplified T<sub>1𝞺</sub> experiment illustrating the suspension of some relaxation processes during the application of the spin-lock pulse, <i>θ</i><sub>y</sub>. After the spin-lock pulse is removed, the magnetization relaxes as a free induction decay, FID. \n",
     "</b>\n",
-    "</center>\n",
     "</div>\n",
     "\n",
     "<p>\n",
@@ -162,11 +160,10 @@
    },
    "source": [
     "<div class=figure_caption>\n",
-    "<center>\n",
-    "<b style=\"text-align:justify;\">\n",
+    "<p style=\"text-align:justify;\">\n",
+    "<b>>\n",
     "Figure 3. An example T<sub>1𝞺</sub> relaxation map of cartilage in the knee, using a spin-lock frequency of 350 Hz, five TSLs linearly spaced from 2-82 ms, and TR/TE 3300 ms/10 ms. Reproduced with permission from (Wang et al. 2015).\n",
     "</b>\n",
-    "</center>\n",
     "</div>\n",
     "\n",
     "<p>\n",
