--- a/afi_blog/ActualFlipAngleImaging.ipynb
+++ b/afi_blog/ActualFlipAngleImaging.ipynb
@@ -225,7 +225,8 @@
     "% All flip angles are in degrees\n",
     "\n",
     "TR1_range = 5:5:200;\n",
-    "TR2_range = 5:5:200;\n",
+    "n = 5;\n",
+    "TR2_range = n*TR1_range;\n",
     "\n",
     "params.EXC_FA = 1:90;\n",
     "\n",
@@ -270,9 +271,13 @@
    "source": [
     "%get params --from Octave\n",
     "%get TR1_range --from Octave\n",
-    "%get signal_WM --from Octave\n",
-    "%get signal_GM --from Octave\n",
-    "%get signal_CSF --from Octave"
+    "%get TR2_range --from Octave\n",
+    "%get signal1_WM --from Octave\n",
+    "%get signal2_WM --from Octave\n",
+    "%get signal1_GM --from Octave\n",
+    "%get signal2_GM --from Octave\n",
+    "%get signal1_CSF --from Octave\n",
+    "%get signal2_CSF --from Octave"
    ]
   },
   {
@@ -364,7 +369,7 @@
     "    step = dict(\n",
     "        method = 'restyle',  \n",
     "        args = ['visible', [False] * len(data1_1)],\n",
-    "        label = str(TR1_range[i])\n",
+    "        label = str('TR1 value (ms): ') + str(TR1_range[i]) + str(' and TR2 value (ms): ') + str(TR2_range[i])\n",
     "        )\n",
     "    step['args'][1][i] = True # Toggle i'th trace to \"visible\"\n",
     "    steps.append(step)\n",
@@ -374,20 +379,13 @@
     "        x = 0,\n",
     "        y = -0.02,\n",
     "        active = 3,\n",
-    "        currentvalue = {\"prefix\": \"TR1 value (ms): <b>\"},\n",
-    "        pad = {\"t\": 50, \"b\": 10},\n",
-    "        steps = steps),\n",
-    "    dict(\n",
-    "        x = 0,\n",
-    "        y = -0.5,\n",
-    "        active = 19,\n",
-    "        currentvalue = {\"prefix\": \"TR2 value (ms): <b>\"},\n",
+    "        currentvalue = {\"prefix\": \" \"},\n",
     "        pad = {\"t\": 50, \"b\": 10},\n",
     "        steps = steps)]\n",
     "\n",
     "layout = go.Layout(\n",
-    "    width=600,\n",
-    "    height=500,\n",
+    "    width=580,\n",
+    "    height=450,\n",
     "    margin=go.layout.Margin(\n",
     "        l=80,\n",
     "        r=40,\n",
@@ -1080,33 +1078,29 @@
     "\n",
     "init_notebook_mode(connected=True)\n",
     "\n",
-    "data1 = dict(\n",
-    "        visible = True,\n",
-    "        x = params[\"EXC_FA\"],\n",
-    "        y = r_analytical,\n",
-    "        name = 'Analytical Solutions',\n",
-    "        text = params[\"EXC_FA\"],\n",
-    "        mode = 'lines', \n",
-    "        line = dict(\n",
-    "            color = ('rgb(0, 0, 0)'),\n",
-    "            dash = 'dot'),\n",
-    "        hoverinfo='none')\n",
-    "\n",
-    "data2 = dict(\n",
-    "        visible = True,\n",
-    "        x = params[\"EXC_FA\"],\n",
-    "        y = r_approximation,\n",
-    "        name = 'First-order Approximation Solution',\n",
-    "        text = params[\"EXC_FA\"],\n",
+    "data1 = [dict(\n",
+    "        visible = False,\n",
     "        mode = 'lines',\n",
-    "        line = dict(\n",
-    "            color = ('rgb(0, 0, 0)'),\n",
-    "            dash = 'dot'\n",
-    "            ),\n",
-    "        hoverinfo='none',\n",
-    "        showlegend=False)\n",
+    "        x = params[\"EXC_FA\"],\n",
+    "        y = abs(np.squeeze(np.asarray(r_analytical[ii]))),\n",
+    "        name = 'Analytical',\n",
+    "        text = 'Analytical',\n",
+    "        hoverinfo = 'x+y+text') for ii in range(len(T1_range))]\n",
     "\n",
-    "data = [data1, data2]\n",
+    "data1[10]['visible'] = True\n",
+    "\n",
+    "data2 = [dict(\n",
+    "        visible = False,\n",
+    "        mode = 'lines',\n",
+    "        x = params[\"EXC_FA\"],\n",
+    "        y = abs(np.squeeze(np.asarray(r_approximation[ii]))),\n",
+    "        name = 'Approximation',\n",
+    "        text = 'Approximation',\n",
+    "        hoverinfo = 'x+y+text') for ii in range(len(T1_range))]\n",
+    "\n",
+    "data2[10]['visible'] = True\n",
+    "\n",
+    "data = data1 + data2\n",
     "\n",
     "steps = []\n",
     "for i in range(len(T1_range)):\n",
@@ -1121,44 +1115,41 @@
     "sliders = [dict(\n",
     "    x = 0,\n",
     "    y = -0.02,\n",
-    "    active = 2,\n",
+    "    active = 10,\n",
     "    currentvalue = {\"prefix\": \"T1 value (ms): <b>\"},\n",
     "    pad = {\"t\": 50, \"b\": 10},\n",
-    "    steps = steps\n",
-    ")]\n",
+    "    steps = steps)]\n",
     "\n",
     "layout = go.Layout(\n",
     "    width=580,\n",
     "    height=450,\n",
     "    margin=go.layout.Margin(\n",
     "        l=80,\n",
-    "        r=80,\n",
+    "        r=40,\n",
     "        b=60,\n",
-    "        t=60,\n",
+    "        t=10,\n",
     "    ),\n",
     "    annotations=[\n",
     "        dict(\n",
     "            x=0.5004254919715793,\n",
-    "            y=-0.14,\n",
+    "            y=-0.18,\n",
     "            showarrow=False,\n",
-    "            text='Excitation Flip Angle (<i>θ<sub>n</sub></i>)',\n",
+    "            text='Excitation Flip Angle (°)',\n",
     "            font=dict(\n",
     "                family='Times New Roman',\n",
-    "                size=22,\n",
-    "                color=('rgb(21, 91, 158)')\n",
+    "                size=22\n",
     "            ),\n",
     "            xref='paper',\n",
     "            yref='paper'\n",
     "        ),\n",
     "        dict(\n",
-    "            x=-0.17,\n",
+    "            x=-0.15,\n",
     "            y=0.5,\n",
     "            showarrow=False,\n",
-    "            text='r',\n",
+    "            text='Signal',\n",
     "            font=dict(\n",
     "                family='Times New Roman',\n",
-    "                size=22,\n",
-    "                color=('rgb(21, 91, 158)')\n",
+    "                size=22\n",
     "            ),\n",
     "            textangle=-90,\n",
     "            xref='paper',\n",
@@ -1167,7 +1158,7 @@
     "    ],\n",
     "    xaxis=dict(\n",
     "        autorange=False,\n",
-    "        range=[params['EXC_FA'][0], params['EXC_FA'][-1]],\n",
+    "        range=[0, params['EXC_FA'][-1]],\n",
     "        showgrid=False,\n",
     "        linecolor='black',\n",
     "        linewidth=2\n",
@@ -1179,8 +1170,8 @@
     "        linewidth=2\n",
     "    ),\n",
     "    legend=dict(\n",
-    "        x=0.32,\n",
-    "        y=0.98,\n",
+    "        x=0.5,\n",
+    "        y=0.9,\n",
     "        traceorder='normal',\n",
     "        font=dict(\n",
     "            family='Times New Roman',\n",
@@ -1190,11 +1181,12 @@
     "        bordercolor='#000000',\n",
     "        borderwidth=2\n",
     "    ), \n",
+    "    sliders=sliders\n",
     ")\n",
     "\n",
     "fig = dict(data=data, layout=layout)\n",
     "\n",
-    "iplot(fig, filename = 'basic-line', config = config)"
+    "iplot(fig, filename = 'basic-line', config = config)\n"
    ]
   },
   {
@@ -1651,9 +1643,9 @@
     "%% MATLAB/OCTAVE CODE\n",
     "% Download Actual Flip-Angle Imaging brain MRI data for Figure 8 of the blog post\n",
     "\n",
-    "cmd = ['curl -L -o afi_brain.zip https://osf.io/csjgx/download/'];\n",
+    "cmd = ['curl -L -o b1_afi.zip https://osf.io/csjgx/download/'];\n",
     "[STATUS,MESSAGE] = unix(cmd);\n",
-    "unzip('afi_brain.zip');\n"
+    "unzip('b1_afi.zip');\n"
    ]
   },
   {
@@ -1669,24 +1661,16 @@
     "\n",
     "clear all\n",
     "\n",
-    "% Load data into environment, and rotate mask to be aligned with IR data\n",
-    "load('AFIData1.nii');\n",
-    "load('AFIData2.nii');\n",
-    "\n",
     "% Format qMRLab b1_afi model parameters, and load them into the Model object\n",
     "Model = b1_afi; \n",
     "Model.Prot.Sequence.Mat = [60, 20, 100];\n",
     "\n",
     "% Format data structure so that they may be fit by the model\n",
     "data = struct();\n",
-    "data.AFIData1 = load_nii_data('AFIData1.nii');\n",
-    "data.AFIData2 = load_nii_data('AFIData2.nii');\n",
+    "data.AFIData1 = load_nii_data('b1_afi/AFIData1.nii');\n",
+    "data.AFIData2 = load_nii_data('b1_afi/AFIData2.nii');\n",
     "\n",
-    "FitResults = FitData(data,Model,0); % The '0' flag is so that no wait bar is shown.\n",
-    "\n",
-    "%Load results\n",
-    "B1map_raw = FitResults.B1map_raw;\n",
-    "B1map_filtered = FitResults.B1map_filtered;"
+    "FitResults = FitData(data,Model,0); % The '0' flag is so that no wait bar is shown."
    ]
   },
   {
@@ -1700,15 +1684,14 @@
     "%% MATLAB/OCTAVE CODE\n",
     "% Code used to re-orient the images to make pretty figures, and to assign variables with the axis lengths.\n",
     "\n",
-    "B1map_raw = imrotate(B1map_raw,-90);\n",
-    "B1map_filtered = imrotate(B1map_filtered,-90);\n",
+    "B1map_filtered = imrotate(FitResults.B1map_filtered,-90);\n",
     "\n",
-    "xAxis = [0:size(B1map_raw,2)-1];\n",
-    "yAxis = [0:size(B1map_raw,1)-1];\n",
+    "xAxis = [0:size(B1map_filtered,2)-1];\n",
+    "yAxis = [0:size(B1map_filtered,1)-1];\n",
     "\n",
     "% Raw MRI data at different TI values\n",
-    "AFIData1 = imrotate(squeeze(AFIData1(:,:,:)),-90);\n",
-    "AFIData2 = imrotate(squeeze(AFIData2(:,:,:)),-90);\n"
+    "AFIData1 = imrotate(AFIData1,-90);\n",
+    "AFIData2 = imrotate(AFIData2,-90);\n"
    ]
   },
   {
@@ -1722,7 +1705,6 @@
    },
    "outputs": [],
    "source": [
-    "%get B1map_raw --from Octave\n",
     "%get B1map_filtered --from Octave\n",
     "%get AFIData1 --from Octave\n",
     "%get AFIData2 --from Octave\n",
@@ -1760,24 +1742,14 @@
     "                   name = 'Signal1')\n",
     "trace3 = go.Heatmap(x = xAxis,\n",
     "                   y = yAxis,\n",
-    "                   z=B1map_raw,\n",
+    "                   z=B1map_filtered,\n",
     "                   zmin=0.7,\n",
     "                   zmax=1.3,\n",
     "                   colorscale='RdBu',\n",
     "                   visible=True,\n",
     "                   name = 'B1 raw values')\n",
-    "trace4 = go.Heatmap(x = xAxis,\n",
-    "                   y = yAxis,\n",
-    "                   z=B1map_filtered,\n",
-    "                   zmin=0.7,\n",
-    "                   zmax=1.3,\n",
-    "                   colorscale='RdBu',\n",
-    "                   xaxis='x2',\n",
-    "                   yaxis='y2',\n",
-    "                   visible=True,\n",
-    "                   name = 'B1 filtered values')\n",
     "\n",
-    "data=[trace1, trace2, trace3, trace4]\n",
+    "data=[trace1, trace2, trace3]\n",
     "\n",
     "\n",
     "updatemenus = list([\n",
@@ -1794,33 +1766,12 @@
     "         buttons=list([   \n",
     "            dict(label = 'Signal 1',\n",
     "                 method = 'update',\n",
-    "                 args = [{'visible': [True, False]},\n",
+    "                 args = [{'visible': [True, False, True]},\n",
     "                         ]),\n",
     "            dict(label = 'Signal 2',\n",
     "                 method = 'update',\n",
-    "                 args = [{'visible': [False, True]},\n",
+    "                 args = [{'visible': [False, True, True]},\n",
     "                           ]),\n",
-    "        ])\n",
-    "    )\n",
-    "    dict(active=1,\n",
-    "         x = 0.09,\n",
-    "         xanchor = 'right',\n",
-    "         y = -0.15,\n",
-    "         yanchor = 'bottom',\n",
-    "         direction = 'up',\n",
-    "         font=dict(\n",
-    "                family='Times New Roman',\n",
-    "                size=16\n",
-    "            ),\n",
-    "         buttons=list([   \n",
-    "            dict(label = 'B<sub>1</sub> raw',\n",
-    "                 method = 'update',\n",
-    "                 args = [{'visible': [True, False]},\n",
-    "                           ]),\n",
-    "            dict(label = 'B<sub>1</sub> filtered',\n",
-    "                 method = 'update',\n",
-    "                 args = [{'visible': [False, True]},\n",
-    "                           ])\n",
     "        ])\n",
     "    )\n",
     "])\n",
